# ChangeLog for net-analyzer/nagios-plugins
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.30 2004/12/11 16:37:06 config Exp $

  11 Dec 2004; Benjamin Schindler <config@gentoo.org>
  nagios-plugins-1.3.1-r1.ebuild:
  Stable on amd64

  22 Nov 2004; Jason Wever <weeve@gentoo.org>
  nagios-plugins-1.3.1-r1.ebuild:
  Re-marking stable on sparc as someone moved it back to testing and broke
  dependencies.

  21 Nov 2004; Eldad Zack <eldad@gentoo.org> +files/check_swap.c.patch,
  nagios-plugins-1.3.1-r1.ebuild:
  check_swap fix for kernel 2.6, thanks to Evgeny Stambulchik
  <fnevgeny@weizmann.ac.il> for providing the patch. Closes #61386.

  21 Nov 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  contribs nitpicks: chmod all .pl script +x, fixed interpreter,
  check_file_age.pl: fixed use clause. Thanks to Matt Van Wormer
  <matt@broadleafservices.com>. Closes #68292.

  24 Oct 2004; Jason Wever <weeve@gentoo.org>
  nagios-plugins-1.3.1-r1.ebuild:
  Stable on sparc.

  20 Aug 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  Fixed ebuild for binary install. Closes bug #58928.

  20 Aug 2004; Eldad Zack <eldad@gentoo.org>
  +files/nagios-plugins-noradius.patch, nagios-plugins-1.3.1-r1.ebuild:
  Disabled building of check_radius. See bug #45139.

  04 Aug 2004; Jon Hood <squinky86@gentoo.org> nagios-plugins-1.3.1-r1.ebuild,
  nagios-plugins-1.3.1.ebuild:
  Move enewuser syntax to pkg_preinst() irt #58526.

  24 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  Added contrib plugins to install. As a special case, insert check_nagios_db.pl
  directly into libexec when emerge with db support. Closes #57429.

  11 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  marked x86 stable

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,