@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/nagios-plugins
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.30 2004/12/11 16:37:06 config Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.31 2005/02/15 12:03:12 dragonheart Exp $
+
+*nagios-plugins-1.4 (15 Feb 2005)
+
+  15 Feb 2005; Daniel Black <dragonheart@gentoo.org>
+  +nagios-plugins-1.4.ebuild:
+  Version bump thanks to the extreme persistance of Marco Morales
+  <soulse@gmail.com> in bug #81826
 
   11 Dec 2004; Benjamin Schindler <config@gentoo.org>
   nagios-plugins-1.3.1-r1.ebuild:
